install_data(
    'icons/atlas/LocationMarker.svg',
    install_dir: join_paths(get_option('prefix'), get_option('datadir'))
)

install_data(
    'com.github.ryonakano.atlas.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data(
    'schemas/com.github.ryonakano.atlas.gschema.xml',
    install_dir: join_paths(get_option('datadir'), 'glib-2.0', 'schemas')
)
